syntax = "proto3";

package images;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateImageFromURLRequest {
    reserved 2, 6, 7, 8, 9, 11;

    string SrcURL = 1;
    string DstImageId = 3;
    string FolderId = 4;
    repeated types.DiskPool DiskPools = 5;
    bool UseS3 = 10;
}

message CreateImageFromURLTaskState {
    reserved 7;

    int64 Offset = 2;
    double Progress = 3;
    int64 ImageSize = 4;
    int64 ImageStorageSize = 5;
    string DataplaneTaskID = 6;
    optional string ImageFormat = 8;
}
