syntax = "proto3";

package snapshots;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/snapshots/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteSnapshotRequest {
    reserved 2, 3;

    string SnapshotId = 1;
}

message DeleteSnapshotTaskState {}
